# finite-fields

./: .gitignore  LICENSE  README.md  Setup.hs  finite-fields.cabal
cbits/: conway_table.c  zech.c  zech.h
conway/: README.txt
examples/: .gitignore  curve_count.hs
src/Math/FiniteField/: Class.hs  Conway.hs  Misc.hs  Primes.hs  Sign.hs  TypeLevel.hs
src/Math/FiniteField/Conway/: Internal.hs
src/Math/FiniteField/Galois/: Small.hs
src/Math/FiniteField/Galois/Small/: Internal.hs
src/Math/FiniteField/GaloisField/: Small.hs  Zech.hs
src/Math/FiniteField/GaloisField/Small/: Internal.hs
src/Math/FiniteField/GaloisField/Zech/: C.hs
src/Math/FiniteField/PrimeField/: Generic.hs  Small.hs
src/Math/FiniteField/PrimeField/Generic/: Raw.hs
src/Math/FiniteField/PrimeField/Small/: Raw.hs
src/Math/FiniteField/TypeLevel/: Singleton.hs
test/: .ghci  TestSuite.hs
test/Test/: Common.hs  ConcreteFields.hs  FieldProperties.hs  FieldTests.hs  SubFields.hs  WitnessStore.hs
