Name:                finite-fields
Version:             0.1
Synopsis:            Arithmetic in finite fields

Description:         Implementation of arithmetic in finite fields (prime fields
                     and fields of prime power order). Finite fields are
                     ubiquitous in algebraic geometry, number theory and cryptography.
                     
                     For now we concentrate on relatively small fields,
                     but more efficient algorithms for big fields (required in 
                     cryptography) may be added later.

License:             BSD3
License-file:        LICENSE
Author:              Balazs Komuves
Copyright:           (c) 2021 Balazs Komuves
Maintainer:          bkomuves (plus) hackage (at) gmail (dot) com
Homepage:            https://github.com/bkomuves/finite-fields
Stability:           Experimental
Category:            Math
Tested-With:         GHC == 8.6.5
Cabal-Version:       1.24
Build-Type:          Custom

extra-source-files:  conway/*

source-repository head
  type:                git
  location:            https://github.com/bkomuves/finite-fields
     
--------------------------------------------------------------------------------

Library

  Build-Depends:       base >= 4 && < 5, containers >= 0.5, random

  Exposed-Modules:     Math.FiniteField.PrimeField.Generic
                       Math.FiniteField.PrimeField.Small
                       Math.FiniteField.Conway
                       Math.FiniteField.Primes
                       Math.FiniteField.TypeLevel
                       Math.FiniteField.Sign
                       Math.FiniteField.Misc

  Default-Language:    Haskell2010
  Default-Extensions:  CPP, BangPatterns, KindSignatures, DataKinds

  Hs-Source-Dirs:      src

  C-Sources:           cbits/conway_table.c 

  ghc-options:         -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports

--------------------------------------------------------------------------------

